fix[Help Component z-index]

--- a/app/javascript/components/utilities/help/style.sass
+++ b/app/javascript/components/utilities/help/style.sass
@@ -25,7 +25,7 @@
     padding: 5px 10px
     border-radius: 6px
     font-size: 12px
-    z-index: 10000
+    z-index: 11000
     &::after
       content: ' '
       position: absolute
